--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
         "autoprefixer": "^10.2.4",
         "browser-sync": "^2.26.3",
         "eslint": "^8.8.0",
-        "html-validate": "^2.8.0",
+        "html-validate": "^7.1.1",
         "mkdirp": "^0.5.1",
         "npm-run-all": "^4.1.5",
-        "onchange": "^5.2.0",
+        "onchange": "^7.1.0",
         "postcss": "^8.2.6",
         "postcss-cli": "^8.3.1",
         "sass": "^1.44.0"
+    },
+    "dependencies": {
+        "stylelint": "^13.13.1"
     }
 }
